style.css
body {
    width: 100%;
    margin: 0;
    overflow-x: hidden;
    color: black;
}
body.dark {
    background-color: black;
    color:#BBB
}

#messages, #menu {
    width: 100%;
    text-align: center;
    font-size: 1.7em;
    font-family: 'Corbel', 'Trebuchet MS', Arial, sans-serif;
    margin-top: 0.5em;
}

#game {
    position: relative;
    left: 0;
}
#game.transition {
    transition: left 1000ms ease-in-out;
    left: -100%;
    width: 200%;
}
#game.transition.slow {
    transition: left 5000ms ease-in-out;
}
#game * {
    box-sizing: content-box;
}

.level {
    display: inline-flex;
    width: 100%;
    justify-content: center;
    flex-wrap: wrap;
}
#game.transition .level {
    width: 50%;
}


.bottle {
    width: 3em;
    height: 20em;
    padding-top: 1em;
    margin: 1em;
    margin-top: 3em;
    transition: margin 300ms, padding 500ms, border 500ms;
    border: 0.25em solid black;
    border-top: 0;
    border-radius: 0 0 1.75em 1.75em;

    display: inline-flex;
    flex-direction: column-reverse;
    vertical-align: text-bottom;
    touch-action: manipulation;
}
.dark .bottle {
    border-color: gray;
}
.bottle::after {
    content: "";
    height: 0;
    width: 3em;
    mask: url("assets/mystical-unicorn.png") 3em 0;
    background: black;
    transition: top 500ms, height 500ms;
    position: absolute;
    top: 3em;
}
.dark .bottle::after {
    background: gray;
}
.slow .bottle::after {
    transition: top 1500ms, height 1500ms;
}

.capped {
    padding-top: 0;
    border-top: 1em solid black;
}
.capped::after {
    top: 0.84em;
    height: 2.16em;
    mask-size: 3em 2.16em;
}
@keyframes rainbow-run {
    from {background-position-x: 0;}
    to {background-position-x: -2em;}
}
.rainbow .capped::after {
    background: linear-gradient(90deg, red, orange, yellow, lime, cyan, blue, magenta, red);
    background-size: 2em 2.16em;
    animation: rainbow-run linear 2.4s infinite;
}

.selected-bottle {
    margin-top: 1em;
    margin-bottom: 2em;
}

.water {
    width: 3em;
}

.water:first-of-type {
    border-radius: 0 0 1.75em 1.75em;
}

#toolbar {
    height: 2.5em;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1000;
}
#toolbar div {    
    display: inline-block;
    cursor: pointer;
    font-size: 2.5em;
    height: 1.5em;
    width: 1.5em;
    padding: 0;
    text-align: center;
    touch-action: manipulation;
    color: black
}
.dark #toolbar div {    
    color: #BBB
}
#toolbar div.inactive {
    color: #999;
}

#menu {
    text-align: center;
}
#menu > div {
    margin-top: 1em;
}
input[type="checkbox"] {
    width: 2em;
    height: 2em;
    vertical-align: middle;
}
input[type="number"] {
    font-size: 1em;
    vertical-align: middle;
    margin-top: -0.2em;
}

